[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Entities/Interactable.gd" type="Script" id=1]
[ext_resource path="res://Resources/images/scroll-empty.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Entities/GuideBookItem.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="GuideBookItem" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
