[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/images/monster_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Monster.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Entities/Interactable.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.8479, 33.0825 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76.1249, 80.3656 )

[node name="Monster" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="MonsterSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
frame = 3
playing = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -30.0
margin_top = 34.0
margin_right = 30.0
margin_bottom = 54.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
shape = SubResource( 1 )

[node name="InteractableArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="InteractableArea" to="InteractableArea" method="_on_Interactable_Area_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="InteractableArea" method="_on_Interactable_Area_body_exited"]
